--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,11 @@
             <artifactId>hibernate-jpa-2.1-api</artifactId>
             <version>1.0.0.Final</version>
         </dependency>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>2.8.2</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>spring-mybatis</finalName>
