--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,6 +1,6 @@
 
 ## set log level  ##
-log4j.rootLogger=debug,stdout
+log4j.rootLogger=debug,console,stdout
 
 ## console ##
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
@@ -9,10 +9,12 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%-d{yyyy-MM-dd HH:mm:ss}  [ %t:%r ] - [ %p ]  %m%n
 
 ## mybatis 输出打印##
-log4j.logger.com.ibatis=bebug
+log4j.logger.com.springframework=DEBUG
+log4j.logger.com.ibatis=DEBUG
 log4j.logger.com.ibatis.common.jdbc.SimpleDataSource=DEBUG
 log4j.logger.com.ibatis.common.jdbc.ScriptRunner=DEBUG
 log4j.logger.com.ibatis.sqlmap.engine.impl.SqlMapClientDelegate=DEBUG
 log4j.logger.Java.sql.Connection=DEBUG
 log4j.logger.java.sql.Statement=DEBUG
 log4j.logger.java.sql.PreparedStatement=DEBUG
+log4j.logger.java.sql.ResultSet=DEBUG
