--- a/src/main/resources/redis.properties
+++ b/src/main/resources/redis.properties
@@ -1,9 +1,6 @@
 ##  redis  settings  ##
-
 redis.host=127.0.0.1
 redis.port=6379
+redis.timeout=2000
 redis.password=1234567890
-redis.maxIdle=300
-redis.maxActive=600
-redis.maxWait=1000
-redis.testOnborrow=true
+redis.db.index=0
