Token拦截器 权限拦截

--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,11 @@
             <artifactId>jboss-logging</artifactId>
             <version>3.3.0.Final</version>
         </dependency>
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.10</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>spring-mybatis</finalName>
