--- a/src/main/resources/redis.properties
+++ b/src/main/resources/redis.properties
@@ -1,8 +1,48 @@
-##  redis  settings  ##
-redis.host=127.0.0.1
+#JedisPoolConfig#
+#最大连接数
+redis.pool.maxTotal=30
+
+#最大空闲时间
+redis.pool.maxIdle=10
+
+#每次最大连接数
+redis.pool.numTestsPerEvictionRun=1024
+
+#释放扫描的时间间隔
+redis.pool.timeBetweenEvictionRunsMills=30000
+
+#连接最小空闲时间
+redis.pool.minEvictableIdleTimeMillis=1800000
+
+#连接按时间多久释放，当空闲时间>该值且空闲连接>最大空闲连接数时直接释放连接
+redis.pool.softMinEvictableIdleTimeMillis=10000
+
+#获得连接时的最大等待毫秒数,小于0:阻塞是不确定时间,默认-1
+redis.pool.maxWaitMills=1500
+
+#在获得连接的时候检查有效性,默认false
+redis.pool.testOnBorrow=true
+
+#在空闲时检查有效性,默认false
+redis.pool.testWhileIdle=true
+
+#连接耗尽时是否阻塞,false报异常,true阻塞超市,默认true
+redis.pool.blockWhenExhausted=false
+
+
+#JedisConnectionFactory参数
+
+#连接地址
+redis.hostName=127.0.0.1
+
+#端口
 redis.port=6379
-redis.timeout=2000
-redis.password=1234567890
-redis.db.index=0
-redis.maxIdle=300
-redis.maxTotal=600
+
+#超时时间
+redis.timeout=3000
+
+#密码
+redis.password=
+
+#默认数据库索引
+redis.dbIndex=0
