--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,8 +1,11 @@
 ##  jdbc  config  ##
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://101.37.35.73:3306/zjbloodmaster?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
+#jdbc.url=jdbc:mysql://101.37.35.73:3306/zjbloodmaster?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
+#jdbc.username=root
+#jdbc.password=hk2017@
+jdbc.url=jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
 jdbc.username=root
-jdbc.password=hk2017@
+jdbc.password=root
 jdbc.maxWait=60000
 jdbc.initialSize=1
 jdbc.minIdle=1
